--- a/collections/src/main/resources/i18n/MessageResources.properties
+++ b/collections/src/main/resources/i18n/MessageResources.properties
@@ -6,12 +6,14 @@
 javax.faces.validator.BeanValidator.MESSAGE={1} {0}
 
 #--------------------------------- BUTTONS --------------------------------#
-
+button_accept = ACCEPT
 #--------------------------------- END BUTTONS ----------------------------#
 
 
 #--------------------------------- HEADER --------------------------#
 header_title = COLLECTIONS
+header_welcome = WELCOME
+header_exit = EXIT
 #--------------------------------- END HEADER -----------------------------#
 
 
@@ -22,3 +24,11 @@ menu_carTramdemarks = CAR TRADEMARKS
 menu_carBrands = CAR BRANDS
 menu_beers = BEERS
 #--------------------------------- END MENU ----------------------------#
+
+
+#--------------------------------- LOGIN ------------------------------#
+login_access = SIGN IN
+login_user = USER
+login_pass = PASSWORD
+login_errorLogin = Your user/password is incorrect. Please try again
+#--------------------------------- END LOGIN ------------------------------#
